--- a/arch/arm64/configs/veux_defconfig
+++ b/arch/arm64/configs/veux_defconfig
@@ -97,7 +97,7 @@ CONFIG_CMDLINE_EXTEND=y
 # CONFIG_DMI is not set
 CONFIG_WT_QGKI=y
 CONFIG_BUILD_ARM64_UNCOMPRESSED_KERNEL=y
-CONFIG_BUILD_ARM64_DT_OVERLAY=y
+# CONFIG_BUILD_ARM64_DT_OVERLAY is not set
 CONFIG_TLB_CONF_HANDLER=y
 CONFIG_SUSPEND_SKIP_SYNC=y
 CONFIG_PM_WAKELOCKS=y
