--- a/arch/arm64/configs/veux_defconfig
+++ b/arch/arm64/configs/veux_defconfig
@@ -127,7 +127,7 @@ CONFIG_CRYPTO_CHACHA20POLY1305=y
 CONFIG_JUMP_LABEL=y
 # CONFIG_STACKPROTECTOR is not set
 CONFIG_SHADOW_CALL_STACK=y
-CONFIG_LTO_CLANG=y
+# CONFIG_CFI_CLANG is not set
 # CONFIG_VMAP_STACK is not set
 CONFIG_BLK_INLINE_ENCRYPTION=y
 CONFIG_BLK_INLINE_ENCRYPTION_FALLBACK=y
